# array-api-strict

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  api.html  array-api-tests-xfails.txt  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  releasing.html  requirements-dev.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: array-api-tests.yml  dependabot-auto-merge.yml  docs-build.yml  docs-deploy.yml  publish-package.yml  tests.yml
_sources/: api.rst.txt  changelog.md.txt  index.md.txt  releasing.md.txt
array_api_strict/: __init__.py  _array_object.py  _constants.py  _creation_functions.py  _data_type_functions.py  _devices.py  _dtypes.py  _elementwise_functions.py  _fft.py  _flags.py  _helpers.py  _indexing_functions.py  _info.py  _linalg.py  _linear_algebra_functions.py  _manipulation_functions.py  _searching_functions.py  _set_functions.py  _sorting_functions.py  _statistical_functions.py  _typing.py  _utility_functions.py  _version.py  fft.py  linalg.py
array_api_strict/tests/: conftest.py  test_array_object.py  test_creation_functions.py  test_data_type_functions.py  test_device_support.py  test_elementwise_functions.py  test_flags.py  test_indexing_functions.py  test_linalg.py  test_manipulation_functions.py  test_searching_functions.py  test_set_functions.py  test_sorting_functions.py  test_statistical_functions.py  test_validation.py
docs/: api.rst  changelog.md  conf.py  index.md  releasing.md  requirements.txt
