[build-system]
requires = ["setuptools >= 61.0,<=75", "setuptools_scm>8"]
build-backend = "setuptools.build_meta"

[project]
name = "array_api_strict"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = ["numpy"]
license = {file = "LICENSE"}
authors = [
    {name = "Consortium for Python Data API Standards"}
]
description = "A strict, minimal implementation of the Python array API standard."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://data-apis.org/array-api-strict/"
Repository = "https://github.com/data-apis/array-api-strict"

[tool.setuptools_scm]
version_file = "array_api_strict/_version.py"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_bytes = true
local_partial_types = true

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disallow_untyped_defs = false
